[package]
name = "bevy_textmode"
version = "0.1.0"
edition = "2021"
authors = ["yopox yopoxdev@gmail.com"]

[dependencies]
bevy = "0.7"
rand = "0.8.4"
image = { version = "0.24.2", features = ["png"] }
bevy_egui = "0.14"
egui_extras = "0.18.0"
#
#[profile.dev.package."*"]
#opt-level = 1
#
#[profile.dev]
#opt-level = 1